overflow-x issues fixed in the First tab and About tab.

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,10 @@
+
+html,
+body {
+  overflow-x: hidden;
+
+}
+
 body {
   /* background: #333333; */
   /* backgrounhsl(186, 100%, 96%), 100%, 96%)dff; */
@@ -7,6 +14,7 @@ body {
   font-size: 18px;
   line-height: 1.8;
   color: #000;
+
 }
 
 
@@ -289,6 +297,13 @@ textarea.form-control {
   }
 }
 
+@media (max-width: 450px) {
+  .index-pre-hero {
+    display: none;
+    visibility: hidden;
+  }
+}
+
 .site-hero-inner .sub-heading {
   font-size: 30px;
   font-weight: 200;
@@ -357,7 +372,7 @@ textarea.form-control {
   position: absolute;
   height: 2px;
   width: 100%;
-  background: #fff;
+  background: #000;
   border-radius: 9px;
   opacity: 1;
   left: 0;
@@ -371,6 +386,7 @@ textarea.form-control {
   -o-transition: .25s ease-in-out;
   transition: .25s ease-in-out;
 }
+
 
 .site-menu-toggle span:nth-child(1) {
   top: 0px;
